# flask-file-explorer

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  languages-and-versions.md  main.py  manual.md  pyproject.toml  pytest_output.txt
.docs/: .gitignore
.docs/features/: add-a-simple-editorconfig-file.md  add-contributingmd-to-flask-file-explorer.md  add-gitignore-file-with-common-python-patterns.md  add-mit-license-to-repository.md  fix-ci-and-build-failures-for-pr-10.md  identify-and-resolve-current-ci-issues-to-ensure-a.md  merge-open-prs-in-flask-file-explorer.md  review-open-prs-for-code-quality-and-conflicts.md  testing-and-verification.md  update-github-actions-in-python-publishyml-to-ensu.md  update-github-actions-in-workflow-to-resolve-build.md
.docs/hotfixes/: investigate-and-resolve-current-ci-issues-causing-.md
.github/workflows/: ci.yml  python-publish.yml
docs/cj/create-a-new-branch-from-main-to-work-on-20260130-161335/: PLAN.md  WORK.md
docs/cj/create-a-simple-test-file-to-confirm-pyt-20260129-124849/: PLAN.md  WORK.md
docs/cj/create-a-temporary-branch-to-safely-merg-20260129-215755/: PLAN.md  WORK.md
docs/cj/create-a-test-file-with-a-simple-test-ca-20260129-174329/: PLAN.md  WORK.md
docs/cj/fetch-list-of-open-pull-requests-to-eval-20260129-042549/: PLAN.md
docs/main/: PLAN.md
docs/merge-pr-7/: PLAN.md
flask_file_explorer/: file_explorer.py  filters.py
flask_file_explorer/templates/: index.html  listings.html
tests/: test_file_explorer.py  test_files.py  test_sample.py
(+11 files in other folders)
