[tool.poetry]
name = "flask-file-explorer"
version = "0.1.0"
description = "A flask based file explorer"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
