[tool.poetry]
name = "flask-file-explorer"
version = "0.0.0"
description = "A flask based file explorer"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thevgergroup/flask-file-explorer"
repository = "https://github.com/thevgergroup/flask-file-explorer.git"
keywords = ["flask", "filesystem", "viewer", "explorer", "htmx"]
classifiers= [
                "Framework :: Flask",
                "Topic :: Desktop Environment :: File Managers",  
                "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
                ]


[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
icecream = "^2.1.3"



[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
